exports[`friend list app - connected component test if friend list is empty legend should be "0 of 0" 1`] = `
<div
  className={undefined}>
  <h1>
    The FriendList
  </h1>
  <input
    autoFocus="true"
    className="form-control"
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Type the name of a friend"
    type="text"
    value="" />
  <ul
    className={undefined} />
  <div
    className={undefined}>
    <div>
      <button
        className="btn btn-default undefined"
        disabled={true}
        onClick={[Function]}>
        <i
          className="fa fa-fast-backward" />
      </button>
      <button
        className="btn btn-default undefined"
        disabled={true}
        onClick={[Function]}>
        <i
          className="fa fa-backward" />
      </button>
    </div>
    <b>
      0
       of 
      0
    </b>
    <div>
      <button
        className="btn btn-default undefined"
        disabled={true}
        onClick={[Function]}>
        <i
          className="fa fa-forward" />
      </button>
      <button
        className="btn btn-default undefined"
        disabled={true}
        onClick={[Function]}>
        <i
          className="fa fa-fast-forward" />
      </button>
    </div>
  </div>
</div>
`;

exports[`friend list app - connected component test navigate to 2nd page 1`] = `
<div
  className={undefined}>
  <h1>
    The FriendList
  </h1>
  <input
    autoFocus="true"
    className="form-control"
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Type the name of a friend"
    type="text"
    value="" />
  <ul
    className={undefined}>
    <li
      className={undefined}>
      <div
        className={undefined}>
        <div>
          <span>
            John F. Kennedy
             
            (M)
          </span>
        </div>
        <div>
          <small>
            xx friends in common
          </small>
        </div>
      </div>
      <div
        className={undefined}>
        <button
          className="btn btn-default undefined"
          onClick={[Function]}>
          <i
            className="fa fa-star-o" />
        </button>
        <button
          className="btn btn-default undefined"
          onClick={[Function]}>
          <i
            className="fa fa-trash" />
        </button>
        <button
          className="btn btn-default undefined"
          onClick={[Function]}>
          <i
            className="fa fa-male" />
        </button>
      </div>
    </li>
  </ul>
  <div
    className={undefined}>
    <div>
      <button
        className="btn btn-default undefined"
        disabled={false}
        onClick={[Function]}>
        <i
          className="fa fa-fast-backward" />
      </button>
      <button
        className="btn btn-default undefined"
        disabled={false}
        onClick={[Function]}>
        <i
          className="fa fa-backward" />
      </button>
    </div>
    <b>
      2
       of 
      2
    </b>
    <div>
      <button
        className="btn btn-default undefined"
        disabled={true}
        onClick={[Function]}>
        <i
          className="fa fa-forward" />
      </button>
      <button
        className="btn btn-default undefined"
        disabled={true}
        onClick={[Function]}>
        <i
          className="fa fa-fast-forward" />
      </button>
    </div>
  </div>
</div>
`;

exports[`friend list app - connected component test render with mock data 1`] = `
<div
  className={undefined}>
  <h1>
    The FriendList
  </h1>
  <input
    autoFocus="true"
    className="form-control"
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Type the name of a friend"
    type="text"
    value="" />
  <ul
    className={undefined}>
    <li
      className={undefined}>
      <div
        className={undefined}>
        <div>
          <span>
            Ronald Reagan
             
            (M)
          </span>
        </div>
        <div>
          <small>
            xx friends in common
          </small>
        </div>
      </div>
      <div
        className={undefined}>
        <button
          className="btn btn-default undefined"
          onClick={[Function]}>
          <i
            className="fa fa-star" />
        </button>
        <button
          className="btn btn-default undefined"
          onClick={[Function]}>
          <i
            className="fa fa-trash" />
        </button>
        <button
          className="btn btn-default undefined"
          onClick={[Function]}>
          <i
            className="fa fa-male" />
        </button>
      </div>
    </li>
    <li
      className={undefined}>
      <div
        className={undefined}>
        <div>
          <span>
            Gerald Ford
             
            (M)
          </span>
        </div>
        <div>
          <small>
            xx friends in common
          </small>
        </div>
      </div>
      <div
        className={undefined}>
        <button
          className="btn btn-default undefined"
          onClick={[Function]}>
          <i
            className="fa fa-star-o" />
        </button>
        <button
          className="btn btn-default undefined"
          onClick={[Function]}>
          <i
            className="fa fa-trash" />
        </button>
        <button
          className="btn btn-default undefined"
          onClick={[Function]}>
          <i
            className="fa fa-male" />
        </button>
      </div>
    </li>
  </ul>
  <div
    className={undefined}>
    <div>
      <button
        className="btn btn-default undefined"
        disabled={true}
        onClick={[Function]}>
        <i
          className="fa fa-fast-backward" />
      </button>
      <button
        className="btn btn-default undefined"
        disabled={true}
        onClick={[Function]}>
        <i
          className="fa fa-backward" />
      </button>
    </div>
    <b>
      1
       of 
      2
    </b>
    <div>
      <button
        className="btn btn-default undefined"
        disabled={false}
        onClick={[Function]}>
        <i
          className="fa fa-forward" />
      </button>
      <button
        className="btn btn-default undefined"
        disabled={false}
        onClick={[Function]}>
        <i
          className="fa fa-fast-forward" />
      </button>
    </div>
  </div>
</div>
`;
